<resources>
    <string name="app_name">AppMax</string>
    <string name="clientes">Clientes</string>
    <string name="pedidos">Pedidos</string>
    <string name="resumo_de_vendas">Resumo de vendas</string>
    <string name="ferramentas">Ferramentas</string>
    <string name="version_home">v.%1$s</string>
    <string name="title_activity_cliente">ClienteActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dados">Dados</string>
    <string name="historico_de_pedidos">Hist. Pedidos</string>
    <string name="alvaras">Alvarás</string>
    <string name="nada_encontrado">Nada encontrado...</string>
    <string name="texto_sem_alvaras">Não há alvaras para exibir,\nverifique com o responsável pelo ERP</string>
    <string name="dados_do_cliente">Dados do cliente</string>
    <string name="cpf">cpf:</string>
    <string name="cnpj">cnpj:</string>
    <string name="ramo_de_atividade">Ramo de atividade:</string>
    <string name="enderecos">Endereços:</string>
    <string name="verificar_status_do_cliente">Verificar status do cliente</string>
    <string name="contatos">Contatos</string>
    <string name="telefone">Telefone:</string>
    <string name="celular">Celular:</string>
    <string name="conjuge">Cônjuge:</string>
    <string name="tipo">Tipo:</string>
    <string name="email">E-mail:</string>
    <string name="data_de_nascimento">Data Nasc.:</string>
    <string name="data_de_nascimento_conjuge">Data Nasc. Cônjuge:</string>
    <string name="time">Time:</string>
    <string name="numero_pedido">NºPed.RCA/ERP:</string>
    <string name="cliente">Cliente:</string>
    <string name="critica_">Crítica:</string>
    <string name="nao_informado">Não informado</string>
    <string name="nao_foi_possivel_carregar">Não foi possivel carregar</string>
    <string name="legendas">Legendas</string>
    <string name="pesquisar">pesquisar</string>
    <string name="status_do_pedido_no_erp">Status do pedido no ERP</string>
    <string name="em_processamento_por_parte_do_fv">Em processamento por parte do FV</string>
    <string name="pedido_realizado_pelo_erp">Pedido recusado pelo ERP</string>
    <string name="posicao_no_erp_pendente">Posição no ERP Pendente</string>
    <string name="posicao_no_erp_bloqueado">Posição no ERP Bloqueado</string>
    <string name="posicao_no_erp_liberado">Posição no ERP Liberado</string>
    <string name="posicao_no_erp_montado">Posição no ERP Montado</string>
    <string name="posicao_no_erp_faturado">Posição no ERP Faturado</string>
    <string name="posicao_no_erp_cancelado">Posição no ERP Cancelado</string>
    <string name="orcamento">Orçamento</string>
    <string name="critica">Crítica</string>
    <string name="aguardando_retorno_do_erp">Aguardando retorno do ERP</string>
    <string name="sucesso">Sucesso</string>
    <string name="falha_parcial">Falha parcial</string>
    <string name="falha_total">Falha total</string>
    <string name="pedido_sofreu_corte">Pedido sofreu corte</string>
    <string name="pedido_com_falta">Pedido com falta</string>
    <string name="pedido_cancelado_no_erp">Pedido cancelado no ERP</string>
    <string name="pedido_com_devolucao">Pedido com devolução</string>
    <string name="pedido_feito_pelo_telemarketing">Pedido feito pelo Telemarketing</string>
    <string name="fechar">Fechar</string>
</resources>
